2.91.XX
    * Add license (GPL3)
    * Tweak shell clock to show date

2.91.92
    * Initial Release
    * Support shell theme change and installation
    * Tweak gtk theme
    * Tweak the user-interface and titlebar fonts
    * Tweak icons in menus and buttons
    * Tweak behavior on laptop lid close
    * Tweak shell font size
    * Tweak file manager desktop icons
    * Tweak titlebar click action 