@@ -1,6 +1,7 @@
 2.91.XX
     * Add license (GPL3)
     * Tweak shell clock to show date
+    * Tweak font hinting
 
 2.91.92
     * Initial Release
